cord to zip endpoint
